--- a/lib/web/templates/admin/item_tag/index.html.eex
+++ b/lib/web/templates/admin/item_tag/index.html.eex
@@ -26,7 +26,7 @@
               <%= Enum.map @item_tags, fn (item_tag) -> %>
                 <tr>
                   <td><%= item_tag.id %></td>
-                  <td><%= item_tag.name %></td>
+                  <td><%= link(item_tag.name, to: item_tag_path(@conn, :show, item_tag.id)) %></td>
                   <td>
                     <%= link("View", to: item_tag_path(@conn, :show, item_tag.id)) %>
                     <%= link("Edit", to: item_tag_path(@conn, :edit, item_tag.id)) %>
