Display item tags on the item index page

--- a/lib/web/templates/admin/item/index.html.eex
+++ b/lib/web/templates/admin/item/index.html.eex
@@ -19,6 +19,7 @@
               <tr>
                 <th>ID</th>
                 <th>Name</th>
+                <th>Item Tags</th>
                 <th>Actions</th>
               </tr>
             </thead>
@@ -27,6 +28,11 @@
                 <tr>
                   <td><%= item.id %></td>
                   <td><%= link(item.name, to: item_path(@conn, :show, item.id)) %></td>
+                  <td>
+                    <%= Enum.map(item.item_tags, fn (item_tag) -> %>
+                      <%= link(item_tag.name, to: item_tag_path(@conn, :show, item_tag.id)) %>
+                    <% end) %>
+                  </td>
                   <td>
                     <%= link("View", to: item_path(@conn, :show, item.id)) %>
                     <%= link("Edit", to: item_path(@conn, :edit, item.id)) %>
