--- a/lib/web/templates/admin/item/show.html.eex
+++ b/lib/web/templates/admin/item/show.html.eex
@@ -68,9 +68,9 @@
     <div class="col-md-12">
       <div class="box">
         <div class="box-header">
-          <h3 class="box-title">Item Tags</h3>
+          <h3 class="box-title">Item Aspects</h3>
           <div class="box-tools">
-            <%= link("Add Tag", to: item_tagging_path(@conn, :new, @item.id), class: "btn btn-primary") %>
+            <%= link("Add Tag", to: item_aspecting_path(@conn, :new, @item.id), class: "btn btn-primary") %>
           </div>
         </div>
         <div class="box-body">
@@ -83,12 +83,12 @@
               </tr>
             </thead>
             <tbody>
-              <%= Enum.map(@item.item_taggings, fn (item_tagging) -> %>
+              <%= Enum.map(@item.item_aspectings, fn (item_aspecting) -> %>
                 <tr>
-                  <td><%= item_tagging.id %></td>
-                  <td><%= link(item_tagging.item_tag.name, to: item_tag_path(@conn, :show, item_tagging.item_tag_id)) %></td>
+                  <td><%= item_aspecting.id %></td>
+                  <td><%= link(item_aspecting.item_aspect.name, to: item_aspect_path(@conn, :show, item_aspecting.item_aspect_id)) %></td>
                   <td>
-                    <%= link(to: item_tagging_path(@conn, :delete, item_tagging.id), method: :delete) do %>
+                    <%= link(to: item_aspecting_path(@conn, :delete, item_aspecting.id), method: :delete) do %>
                       <i class="fa fa-times"></i>
                     <% end %>
                   </td>
