--- a/lib/web/templates/admin/item_aspect/new.html.eex
+++ b/lib/web/templates/admin/item_aspect/new.html.eex
@@ -1,13 +1,13 @@
 <section class="content-header">
   <h1>
-    New Item Tag
+    New Item Aspect
   </h1>
 </section>
 
 <section class="content">
   <div class="row">
     <div class="col-md-12">
-      <%= render "_form.html", path: item_tag_path(@conn, :create), changeset: @changeset, keywords: [], title: "New", submit: "Create" %>
+      <%= render "_form.html", path: item_aspect_path(@conn, :create), changeset: @changeset, keywords: [], title: "New", submit: "Create" %>
     </div>
   </div>
 </section>
