--- a/lib/web/templates/admin/item/index.html.eex
+++ b/lib/web/templates/admin/item/index.html.eex
@@ -6,7 +6,7 @@
 
 <section class="content">
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-9">
       <div class="box">
         <div class="box-header">
           <div class="box-tools">
@@ -18,8 +18,11 @@
             <thead>
               <tr>
                 <th>ID</th>
+                <th>Level</th>
                 <th>Name</th>
+                <th>Type</th>
                 <th>Item Aspects</th>
+                <th>Cost</th>
                 <th>Actions</th>
               </tr>
             </thead>
@@ -27,12 +30,15 @@
               <%= Enum.map @items, fn (item) -> %>
                 <tr>
                   <td><%= item.id %></td>
+                  <td><%= item.level %></td>
                   <td><%= link(item.name, to: item_path(@conn, :show, item.id)) %></td>
+                  <td><%= item.type %></td>
                   <td>
                     <%= Enum.map(item.item_aspects, fn (item_aspect) -> %>
                       <%= link(item_aspect.name, to: item_aspect_path(@conn, :show, item_aspect.id)) %>
                     <% end) %>
                   </td>
+                  <td><%= item.cost %> <%= currency() %></td>
                   <td>
                     <%= link("View", to: item_path(@conn, :show, item.id)) %>
                     <%= link("Edit", to: item_path(@conn, :edit, item.id)) %>
@@ -44,6 +50,55 @@
 
           <%= render(SharedView, "_pagination.html", path: item_path(@conn, :index), pagination: @pagination) %>
         </div>
+      </div>
+    </div>
+
+    <div class="col-md-3">
+      <div class="box">
+        <div class="box-header">
+          <h3 class="box-title">Filter</h3>
+        </div>
+        <%= form_tag item_path(@conn, :index), method: :get do %>
+          <div class="box-body">
+            <div class="form-group">
+              <%= label :item, :type %>
+              <%= select :item, :type, types(), prompt: "Select Type", value: @filter["type"], class: "form-control" %>
+            </div>
+
+            <div class="form-group">
+              <%= label :item, :item_aspect_id, "Item Aspect" %>
+              <%= select :item, :item_aspect_id, item_aspects(), prompt: "Select Item Aspect", value: @filter["item_aspect_id"], class: "form-control" %>
+            </div>
+
+            <div class="form-group">
+              <%= label :item, :level %>
+              <div class="row">
+                <div class="col-md-6">
+                  <%= number_input :item, :level_from, value: @filter["level_from"], placeholder: "From", class: "form-control" %>
+                </div>
+                <div class="col-md-6">
+                  <%= number_input :item, :level_to, value: @filter["level_to"], placeholder: "To", class: "form-control" %>
+                </div>
+              </div>
+            </div>
+
+            <div class="form-group">
+              <%= label :item, :cost %>
+              <div class="row">
+                <div class="col-md-6">
+                  <%= number_input :item, :cost_from, value: @filter["cost_from"], placeholder: "From", class: "form-control" %>
+                </div>
+                <div class="col-md-6">
+                  <%= number_input :item, :cost_to, value: @filter["cost_to"], placeholder: "To", class: "form-control" %>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="box-footer">
+            <%= submit "Filter", class: "btn btn-primary" %>
+            <%= link "Clear", to: item_path(@conn, :index), class: "btn" %>
+          </div>
+        <% end %>
       </div>
     </div>
   </div>
