Edit a shop item
To update the price or quantity without needing to delete the whole
record first.

--- a/lib/web/templates/admin/shop/show.html.eex
+++ b/lib/web/templates/admin/shop/show.html.eex
@@ -65,7 +65,10 @@
                   <td><%= link(shop_item.item.name, to: item_path(@conn, :show, shop_item.item_id)) %></td>
                   <td><%= shop_item.price %></td>
                   <td><%= shop_item.quantity %></td>
-                  <td><%= link("Delete", to: shop_item_path(@conn, :delete, shop_item.id), method: :delete) %></td>
+                  <td>
+                    <%= link("Edit", to: shop_item_path(@conn, :edit, shop_item.id)) %>
+                    <%= link("Delete", to: shop_item_path(@conn, :delete, shop_item.id), method: :delete) %>
+                  </td>
                 </tr>
               <% end %>
             </tbody>
