Set up the game side to use NPCItems
Delete drop rate from items

--- a/lib/web/templates/admin/npc_item/_form.html.eex
+++ b/lib/web/templates/admin/npc_item/_form.html.eex
@@ -15,6 +15,7 @@
         <%= label f, :drop_rate, "Drop Rate" %>
         <%= number_input f, :drop_rate, class: "form-control" %>
         <%= error_tag f, :drop_rate %>
+        <span class="help-block">Enter a number from 0-100</span>
       </div>
     </div>
 
