--- a/lib/web/templates/admin/class/index.html.eex
+++ b/lib/web/templates/admin/class/index.html.eex
@@ -37,8 +37,8 @@
                   <td><%= class.id %></td>
                   <td><%= link(class.name, to: class_path(@conn, :show, class.id)) %></td>
                   <td>
-                    <%= link("View", to: class_path(@conn, :show, class.id)) %>
-                    <%= link("Edit", to: class_path(@conn, :edit, class.id)) %>
+                    <%= link("View", to: class_path(@conn, :show, class.id), class: "btn btn-default btn-xs") %>
+                    <%= link("Edit", to: class_path(@conn, :edit, class.id), class: "btn btn-default btn-xs") %>
                   </td>
                 </tr>
               <% end %>
