--- a/lib/web/templates/admin/npc/index.html.eex
+++ b/lib/web/templates/admin/npc/index.html.eex
@@ -43,8 +43,8 @@
                     <% end) %>
                   </td>
                   <td>
-                    <%= link("View", to: npc_path(@conn, :show, npc.id)) %>
-                    <%= link("Edit", to: npc_path(@conn, :edit, npc.id)) %>
+                    <%= link("View", to: npc_path(@conn, :show, npc.id), class: "btn btn-default btn-xs") %>
+                    <%= link("Edit", to: npc_path(@conn, :edit, npc.id), class: "btn btn-default btn-xs") %>
                   </td>
                 </tr>
               <% end %>
