--- a/lib/web/templates/admin/item/index.html.eex
+++ b/lib/web/templates/admin/item/index.html.eex
@@ -46,9 +46,9 @@
                   </td>
                   <td><%= item.cost %> <%= currency() %></td>
                   <td>
-                    <%= link("View", to: item_path(@conn, :show, item.id)) %>
-                    <%= link("Edit", to: item_path(@conn, :edit, item.id)) %>
-                    <%= link("Clone", to: item_path(@conn, :new, clone_id: item.id)) %>
+                    <%= link("View", to: item_path(@conn, :show, item.id), class: "btn btn-default btn-xs") %>
+                    <%= link("Edit", to: item_path(@conn, :edit, item.id), class: "btn btn-default btn-xs") %>
+                    <%= link("Clone", to: item_path(@conn, :new, clone_id: item.id), class: "btn btn-default btn-xs") %>
                   </td>
                 </tr>
               <% end %>
